Prevented the profile pic overflow on hover in resume page

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -94,6 +94,9 @@ li {
 
     margin-left: 1%;
     margin-right: 1%;
+
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 #profilepic {
